hphp/hack/test/typecheck/expression_trees_not_virtualize_functions/do_while.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function test(): void {
  ExampleDsl`() ==> {
    $x = 0;
    do {
      $x = $x + 1;
    } while ($x < 0);
  }`;
}
